# web_search_tool

./: .dockerignore  .env.example  .gitignore  README.md  batch_main.py  docker-compose.yml  environment.yml  main.py  pdm.toml  pyproject.toml
.github/: SEPARATION_NOTEBOOK_ONLY_OFFLINE.md
.streamlit/: config.toml
apps/: leadership_demo.py  product_evidence_ui.py  product_url_ui.py
config/: default.json
docker/: agent.Dockerfile  browser.Dockerfile  ui.Dockerfile
docs/: ACCEPTANCE_CONTRACT.md  ADAPTIVE_SERPAPI_SEARCH.md  ADOPTION_PLAYBOOK.md  AGENTIC_BROWSER.md  ARCHITECTURE.md  ARTIFACT_GUIDE.md  ARTIFACT_OUTPUT_STRATEGY.md  ASSUMPTIONS_AND_CONSTRAINTS.md  AZUREML_OPERATIONS.md  BELIEF_DRIVEN_PRODUCT_RESOLUTION.md  BROWSER_PROGRESS.md  BROWSER_VISIBLE_IMPLEMENTATION_RECORD.md  BROWSER_VISIBLE_PRODUCT_GATE.md  BUSINESS_JUDGEMENT_REVIEW.md  BUSINESS_OVERVIEW.md  CANDIDATE_PRECISION_AND_CONTEXT.md  CHAMPION.md  CODEBASE_FUNCTIONALITY_MAP.md  CONCISE_REVIEW_ARTIFACTS.md  DECISION_CONTRACTS.md  ELITE_EVIDENCE_ENGINE.md  END_TO_END_OPERATIONS.md  ENTERPRISE_LLM_CONFIGURATION.md  FEATURE_REFERENCE.md  FINAL_SYSTEM_CONTRACT.md  HANDOFF_VALIDATION_CHECKLIST.md  HARDENING_FIXES_APPLIED.md  IMPORT_PATH_FIX.md  INTERACTIVE_ARTIFACT_DIAGNOSTICS.md  LATENCY_OPTIMIZATION.md  LOCAL_VENV_SETUP.md  LOOP_ENGINEERING_FINAL_FIXES.md  MANAGEMENT_DEMO_GUIDE.md  MANDATORY_PRODUCT_URL.md  NOTEBOOK_GATEWAY.md  NOTEBOOK_USAGE.md  OFFLINE_ARTIFACT_NOTEBOOK_ONLY.md  OFFLINE_CAPTURE_ACCESS.md  OFFLINE_CAPTURE_ENTRYPOINT.md  OFFLINE_CAPTURE_NOTEBOOK.md  (+43 more)
examples/: batch_products.example.csv  features_to_code.example.json  toy_feature_schema.json
feature_sets/: toy.json
notebooks/: .branch-ready  00_notebook_gateway.ipynb  01_hybrid_product_url_finder.ipynb  01_resolve_one_product.ipynb  01_run_product_evidence.ipynb  01_single_product.ipynb  01_single_product_harness.ipynb  02_batch_product_harness.ipynb  02_batch_products.ipynb  02_resolve_csv_batch.ipynb  README.md  (+3 more)
(+330 files in other folders)
