[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "product-url-finder"
version = "3.0.0"
description = "Minimal notebook product URL finder using SerpAPI and Crawl4AI"
requires-python = ">=3.10,<3.13"
dependencies = [
  "crawl4ai>=0.9,<1",
  "ipykernel>=6,<8",
  "jupyterlab>=4,<5",
  "openai>=1,<3",
  "pandas>=2.2,<3",
  "python-dotenv>=1,<2",
  "requests>=2.32,<3"
]

[tool.setuptools]
py-modules = ["product_url_finder"]
package-dir = {"" = "src"}
