[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "product-url-finder"
version = "3.0.0"
description = "Minimal notebook product URL finder using Azure OpenAI, SerpAPI, and Crawl4AI"
requires-python = ">=3.10,<3.13"
dependencies = [
  "crawl4ai>=0.7,<1",
  "openai>=1,<3",
  "pandas>=2.2,<3",
  "python-dotenv>=1,<2",
  "requests>=2.32,<3"
]

[project.optional-dependencies]
notebook = [
  "ipykernel>=6,<8",
  "jupyterlab>=4,<5"
]
dev = [
  "pytest>=8,<9"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
