[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "product-url-resolver"
version = "3.0.0"
description = "Minimal notebook-only product URL resolver using SerpAPI, Crawl4AI, and PCA LLM"
requires-python = ">=3.11,<3.13"
dependencies = [
  "crawl4ai==0.8.6",
  "ipykernel>=6,<8",
  "jupyterlab>=4,<5",
  "openai>=1,<3",
  "pandas>=2.2,<3",
  "python-dotenv>=1,<2",
  "requests>=2.32,<3"
]

[project.optional-dependencies]
dev = [
  "nbformat>=5.10,<6",
  "pytest>=8,<9"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
